--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -10,6 +10,10 @@
   width: 64px;
   border-radius: 50%;
 }
+.avatar-xxlarge {
+  width: 148px;
+  border-radius: 4px;
+}
 .avatar-bordered {
   width: 40px;
   border-radius: 50%;
