--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -42,6 +42,10 @@
     flex-direction: row;
     list-style: none;
     margin: 0;
+    @media screen and (max-width: 400px) {
+      display: flex;
+      flex-direction: column;
+    }
   }
   li{
     margin-right: 30px;
