--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -298,14 +298,19 @@
   </div>
 </div>
 <div class="container aboutme" id="about">
-  <p>My name is Doriane, I am 26 years old and I am Franco-Spanish.
-    <br><br>
-    Since my birth I have been immersed in this double culture which allows me today to have an ease in languages ​​and a great open-mindedness.
-    <br><br>
-    After obtaining a degree in Communication Manager and then having worked in events for 4 years, I decided to stand on my own feet by using my know-how to help companies develop.
-    <br><br>
-    Do you have a project ? Let me know.
-  </p>
+  <div class="doriane">
+    <p>My name is Doriane, I am 26 years old and I am Franco-Spanish.
+      <br><br>
+      Since my birth I have been immersed in this double culture which allows me today to have an ease in languages ​​and a great open-mindedness.
+      <br><br>
+      After obtaining a degree in Communication Manager and then having worked in events for 4 years, I decided to stand on my own feet by using my know-how to help companies develop.
+      <br><br>
+      Do you have a project ? Let me know.
+    </p>
+  </div>
+  <div class="doriane-pict">
+    <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676223013/Doriane%20Chatelain/photo_de_profil_i997kj.png" alt="" class="avatar-xxlarge">
+  </div>
 </div>
 <%# <div class="container separation" id="work">
   <p>Do you have a project ? Let me know. </p>
