--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -11,8 +11,11 @@
   border-radius: 50%;
 }
 .avatar-xxlarge {
-  width: 148px;
-  border-radius: 4px;
+  height: 400px;
+  opacity: 0.7;
+  @media screen and (max-width: 320px) {
+    height: 250px;
+  }
 }
 .avatar-bordered {
   width: 40px;
