--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -13,6 +13,7 @@
 .avatar-xxlarge {
   height: 400px;
   opacity: 0.7;
+  padding: 22px;
   @media screen and (max-width: 320px) {
     height: 250px;
   }
