--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -297,8 +297,8 @@
     </div>
   </div>
 </div>
-<div class="container aboutme" id="about">
-  <div class="doriane">
+<div class="container aboutme" >
+  <div class="doriane" id="about">
     <p>My name is Doriane, I am 26 years old and I am Franco-Spanish.
       <br><br>
       Since my birth I have been immersed in this double culture which allows me today to have an ease in languages ​​and a great open-mindedness.
