--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,6 @@
   </div>
 </div>
 <div class="container service" id="service">
-  <%# <h2 class="service__title">Services</h2> %>
-  <%# <h3 class="service__check">Check it out</h3>
-  <hr> %>
   <ul class="cards1">
     <li class="card1">
       <img src=" https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/identite%CC%81_visuelle_ddqhgt.png" alt="" class="card1__img card1__img--full">
@@ -56,9 +53,6 @@
   <p>"Several years of experience, clients who trust me and a constant evolution of my work."</p>
 </div>
 <div class="container realisation" id="realisation">
-  <%# <h2 class="realisation__title">Réalisations</h2>
-  <h3 class="realisation__check">Check it out</h3>
-  <hr> %>
   <ul class="cards">
     <li class="card">
       <a href="#0" role="button" data-target="#modal" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/LAVERIE_SAINTE_MAXIME_nufais.png" alt="" class="card__img card__img--full"></a>
@@ -298,8 +292,8 @@
   </div>
 </div>
 <div class="container aboutme" >
-  <div class="doriane" id="about">
-    <p>My name is Doriane, I am 26 years old and I am Franco-Spanish.
+  <div class="doriane" >
+    <p id="about">My name is Doriane, I am 26 years old and I am Franco-Spanish.
       <br><br>
       Since my birth I have been immersed in this double culture which allows me today to have an ease in languages ​​and a great open-mindedness.
       <br><br>
@@ -312,10 +306,6 @@
     <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676223013/Doriane%20Chatelain/photo_de_profil_i997kj.png" alt="" class="avatar-xxlarge">
   </div>
 </div>
-<%# <div class="container separation" id="work">
-  <p>Do you have a project ? Let me know. </p>
-  <%# <a href="https://www.malt.fr/profile/teddymuller" class="btn-malt" target="_blank">Malt!</a> %>
-<%# </div> %>
 
 <script>
   window.onload = () => {
