meta img & desc

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,23 +14,23 @@
 
       <%# META %>
       <title>Doriane CHATELAIN</title>
-      <meta name="description" content="Community Manager">
+      <meta name="description" content="Community Manager & Graphic Designer">
       <link rel="shortcut icon" href="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675878686/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.33.53_uoxo64.jpg" type="image/x-icon" class="avatar-meta">
         <!-- Facebook Open Graph data -->
-      <meta property="og:title" content="Doriane CHATELAIN - Community Manager" />
+      <meta property="og:title" content="Doriane CHATELAIN - Community Manager & Graphic Designer" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="www.ladybirdbydc.com" />
-      <meta property="og:image" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675878692/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.34.14_ak8pog.jpg" />
+      <meta property="og:image" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676200888/Doriane%20Chatelain/BANDEAU_ABOUT_ME_ywxett.png" />
       <meta property="og:description" content="Community Manager" />
       <meta property="og:site_name" content="Doriane CHATELAIN" />
 
       <!-- Twitter Card data -->
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:site" content="www.ladybirdbydc.com">
-      <meta name="twitter:title" content="Doriane CHATELAIN - Community Manager">
-      <meta name="twitter:description" content="Community Manager">
+      <meta name="twitter:title" content="Doriane CHATELAIN - Community Manager & Graphic Designer">
+      <meta name="twitter:description" content="Community Manager & Graphic Designer">
       <meta name="twitter:creator" content="">
-      <meta name="twitter:image:src" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675873644/Doriane%20Chatelain/WhatsApp_Image_2023-02-08_at_17.25.04_fy8yqa.jpg">
+      <meta name="twitter:image:src" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676223109/Doriane%20Chatelain/LADYBIRD_DC_wlysog.png">
 
       <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
       <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
