meta img & desc1

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
       <meta property="og:type" content="website" />
       <meta property="og:url" content="www.ladybirdbydc.com" />
       <meta property="og:image" content="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676200888/Doriane%20Chatelain/BANDEAU_ABOUT_ME_ywxett.png" />
-      <meta property="og:description" content="Community Manager" />
+      <meta property="og:description" content="Community Manager & Graphic Designer" />
       <meta property="og:site_name" content="Doriane CHATELAIN" />
 
       <!-- Twitter Card data -->
