pic crea trad english

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -274,10 +274,10 @@
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219421/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/1_qyw0ac.png" alt="" class="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676274910/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/1_b3tbxq.png" alt="" class="">
             </div>
             <div class="swiper-slide">
-              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219421/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/2_mkhrgz.png" alt="" class="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676274910/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/2_inyzxe.png" alt="" class="">
             </div>
           </div>
             <div class="swiper-pagination"></div>
