--- a/app/assets/stylesheets/components/_aboutme.scss
+++ b/app/assets/stylesheets/components/_aboutme.scss
@@ -16,7 +16,7 @@
   @media screen and (max-width: 960px) {
     height: auto;
     flex-direction: column;
-    padding: 15px;
+    padding: 15px 0;
   }
 }
 .doriane{
