--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -121,6 +121,12 @@
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198167/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/4_qtncmg.png" alt="" class="">
             </div>
+            <div class="swiper-slide">
+              <video controls><source src="https://res.cloudinary.com/dezfv3vmn/video/upload/v1676198168/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/5_s0feuo.mp4" type="video/mp4" class="videomp4"></video>
+            </div>
+            <div class="swiper-slide">
+              <video controls><source src="https://res.cloudinary.com/dezfv3vmn/video/upload/v1676198168/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/6_xugcc4.mp4" type="video/mp4" class="videomp4"></video>
+            </div>
           </div>
             <div class="swiper-pagination"></div>
             <div class="swiper-button-prev"></div>
@@ -172,6 +178,9 @@
             </div>
             <div class="swiper-slide" id="">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198133/Doriane%20Chatelain/plaquettes/PLAQUETTE%20IAD/1_ieu0vu.png" alt="" class="">
+            </div>
+            <div class="swiper-slide">
+              <video controls><source src="https://res.cloudinary.com/dezfv3vmn/video/upload/v1676198134/Doriane%20Chatelain/plaquettes/PLAQUETTE%20IAD/PLAQUETTE_3_oayrdp.mp4" type="video/mp4" class="videomp4"></video>
             </div>
           </div>
             <div class="swiper-pagination"></div>
