--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -355,7 +355,9 @@
 const swiper = new Swiper('.swiper', {
   // Optional parameters
   // direction: 'vertical',
-  loop: true,
+  loop: false,
+  autoHeight: true,
+
 
   // pagination
   pagination: {
