--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -56,8 +56,8 @@ hr{
     overflow: hidden;
     color: rgb(0, 0, 0);
     border-radius: 0px;
-    transition: box-shadow 250ms;
-    border: none;
+    transition: border 250ms, transform 250ms;
+    border: 4px solid #fff;
     opacity: 0.5;
     background-color: #FBF9F9;
     &:hover{
@@ -102,7 +102,7 @@ hr{
   }
 
   .cardpage{
-    background-color: #fbA8A8;
+    background-color: transparent;
     height: auto;
     width: auto;
   }
