--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -44,7 +44,8 @@
   padding: 10px;
   background-color: transparent;
   border: none;
-  text-align: right;
+  text-align: center;
+  flex-direction: column;
 }
 .btn{
   padding: 5px;
