--- a/app/assets/stylesheets/components/_swiper.scss
+++ b/app/assets/stylesheets/components/_swiper.scss
@@ -12,6 +12,11 @@
     width: auto;
     padding: 20px;
   }
+  video{
+    height: 80vh;
+    width: auto;
+    padding: 20px;
+  }
 
   &-button-next,
   &-button-prev {
