--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="item-2022">
       <ul>
         <li>
-          <a href="mailto:muller.teddy@icloud.com?subject=Contact via LadyBird By DC" target="_blank">® 2023 Created by Teddy Muller</a>
+          <a href="mailto:muller.teddy@icloud.com?subject=Contact via LadyBird By DC" target="_blank">® 2023 Created by TM</a>
         </li>
       </ul>
     </div>
