phone" " f exit uit quit y phone

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -107,7 +107,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198167/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/1_muippj.png" alt="" class="">
@@ -142,7 +142,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198228/Doriane%20Chatelain/plaquettes/PLAQUETTE%20SAYM/1_sxuprp.png" alt="" class="">
@@ -168,7 +168,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198133/Doriane%20Chatelain/plaquettes/PLAQUETTE%20IAD/1_ieu0vu.png" alt="" class="">
@@ -197,7 +197,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198012/Doriane%20Chatelain/plaquettes/PLAQUETTE%20ESTHE%CC%81TIQUE/plaquette_esthetique_yun0fb.png" alt="" class="">
@@ -217,7 +217,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198038/Doriane%20Chatelain/plaquettes/PLAQUETTE%20CAT/1_ekaixz.png" alt="" class="">
@@ -240,7 +240,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198113/Doriane%20Chatelain/plaquettes/PLAQUETTE%20EVENTS2SPAIN/plaquette_events2spain_ovrgzv.png" alt="" class="">
@@ -260,7 +260,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198197/Doriane%20Chatelain/plaquettes/PLAQUETTE%20REVES/plaquette_reves_q0vpfp.png" alt="" class="">
@@ -280,7 +280,7 @@
     <div class="modal-content">
       <div class="cardpage">
         <p></p>
-        <div class="swiper">
+        <div class="swiper container">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676274910/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/1_b3tbxq.png" alt="" class="">
