--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="item-contact">
       <ul>
-        <li><a href="tel:(34)(656311374)p()"><i class="fa-solid fa-phone"></i></a></li>
+        <li><a href="tel:(34)(656311374)p()" title="+34 656 31 13 74"><i class="fa-solid fa-phone"></i></a></li>
         <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
         <%# <li><a href="https://github.com/M-Teddy/" target="_blank"><i class="fab fa-github"></i></a></li> %>
         <li><a href="https://www.instagram.com/ladybird_bydc/" id="insta" target="_blank"><i class="fab fa-instagram"></i></a></li>
